[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-log-analyzer"
version = "0.1.0"
description = "Security-focused CLI analyzer for Linux authentication logs and systemd journal output."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "orucreis" }
]
license = { text = "MIT" }
keywords = [
    "linux",
    "fedora",
    "security",
    "ssh",
    "sudo",
    "journalctl",
    "log-analysis",
    "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/orucreis04/linux-log-analyzer"
Repository = "https://github.com/orucreis04/linux-log-analyzer"
Issues = "https://github.com/orucreis04/linux-log-analyzer/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
linux-log-analyzer = "linux_log_analyzer.cli:main"

[tool.setuptools.packages.find]
include = ["linux_log_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
